--- a/Base/Base.csproj
+++ b/Base/Base.csproj
@@ -38,6 +38,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IDevice.cs" />
+    <Compile Include="IMessage.cs" />
     <Compile Include="NetworkType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
