--- a/Application/Application/LTBLApplication.csproj
+++ b/Application/Application/LTBLApplication.csproj
@@ -35,11 +35,18 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="App.cs" />
+    <Compile Include="Controls\BindablePicker.cs" />
     <Compile Include="Controls\FontLabel.cs" />
     <Compile Include="Models\DeviceModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Views\AddDeviceView.xaml.cs">
-      <DependentUpon>AddDeviceView.xaml</DependentUpon>
+    <Compile Include="Views\AddButtonView.xaml.cs">
+      <DependentUpon>AddButtonView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\AddSliderView.xaml.cs">
+      <DependentUpon>AddSliderView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\AddSwitchView.xaml.cs">
+      <DependentUpon>AddSwitchView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\HomeView.xaml.cs">
       <DependentUpon>HomeView.xaml</DependentUpon>
@@ -87,7 +94,19 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Views\AddDeviceView.xaml">
+    <EmbeddedResource Include="Views\AddButtonView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\AddSliderView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\AddSwitchView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
