--- a/Application/Application.Droid/LTBLApplication.Droid.csproj
+++ b/Application/Application.Droid/LTBLApplication.Droid.csproj
@@ -95,6 +95,10 @@
     <Content Include="Properties\AndroidManifest.xml" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\..\Desktop\sockets-for-pcl-master\Sockets\Sockets.Plugin.Android\Sockets.Plugin.Android.csproj">
+      <Project>{56a56f17-7de1-4ca1-9617-bf32e971ac84}</Project>
+      <Name>Sockets.Plugin.Android</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Application\LTBLApplication.csproj">
       <Name>LTBLApplication</Name>
       <Project>{374496C9-36A8-4698-BD3E-99744DA3598A}</Project>
