--- a/Application/Application/LTBLApplication.csproj
+++ b/Application/Application/LTBLApplication.csproj
@@ -38,7 +38,9 @@
     <Compile Include="Controls\BindablePicker.cs" />
     <Compile Include="Controls\FontLabel.cs" />
     <Compile Include="Models\DeviceModel.cs" />
+    <Compile Include="Models\SliderModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources.cs" />
     <Compile Include="Views\AddButtonView.xaml.cs">
       <DependentUpon>AddButtonView.xaml</DependentUpon>
     </Compile>
@@ -59,6 +61,12 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Sockets.Plugin">
+      <HintPath>..\..\packages\rda.SocketsForPCL.1.1.5\lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Sockets.Plugin.dll</HintPath>
+    </Reference>
+    <Reference Include="Sockets.Plugin.Abstractions">
+      <HintPath>..\..\packages\rda.SocketsForPCL.1.1.5\lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Sockets.Plugin.Abstractions.dll</HintPath>
+    </Reference>
     <Reference Include="Xamarin.Forms.Core">
       <HintPath>..\..\packages\Xamarin.Forms.1.3.1.6296\lib\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.Core.dll</HintPath>
     </Reference>
