my commit messages suck

--- a/Application/Application/LTBLApplication.csproj
+++ b/Application/Application/LTBLApplication.csproj
@@ -34,9 +34,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="App.cs" />
+    <Compile Include="App.xaml.cs">
+      <DependentUpon>App.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\BindablePicker.cs" />
     <Compile Include="Controls\FontLabel.cs" />
+    <Compile Include="Controls\UniqueButton.cs" />
+    <Compile Include="DeviceTemplateSelector.cs" />
     <Compile Include="ISaveLoad.cs" />
     <Compile Include="Models\DeviceModel.cs" />
     <Compile Include="Models\SliderModel.cs" />
@@ -113,6 +117,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\AddSwitchView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="App.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
