--- a/Application/Application.Droid/LTBLApplication.Droid.csproj
+++ b/Application/Application.Droid/LTBLApplication.Droid.csproj
@@ -51,12 +51,20 @@
     </Reference>
     <Reference Include="Mono.Android" />
     <Reference Include="mscorlib" />
+    <Reference Include="Share.Forms.Plugin.Abstractions">
+      <HintPath>..\..\packages\Share.Plugin.Xamarin.Forms.1.0.0.0\lib\MonoAndroid10\Share.Forms.Plugin.Abstractions.dll</HintPath>
+    </Reference>
+    <Reference Include="Share.Forms.Plugin.Android">
+      <HintPath>..\..\packages\Share.Plugin.Xamarin.Forms.1.0.0.0\lib\MonoAndroid10\Share.Forms.Plugin.Android.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Xml" />
-    <Reference Include="Xamarin.Android.Support.v4">
-      <HintPath>..\..\packages\Xamarin.Android.Support.v4.19.0.2\lib\MonoAndroid10\Xamarin.Android.Support.v4.dll</HintPath>
+    <Reference Include="Xamarin.Android.Support.v4, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\Xamarin.Android.Support.v4.19.1.0\lib\MonoAndroid10\Xamarin.Android.Support.v4.dll</HintPath>
     </Reference>
     <Reference Include="Xamarin.Forms.Core">
       <HintPath>..\..\packages\Xamarin.Forms.1.3.1.6296\lib\MonoAndroid10\Xamarin.Forms.Core.dll</HintPath>
@@ -76,6 +84,7 @@
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SaveLoad.cs" />
+    <Compile Include="Share.cs" />
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Assets\Roboto-Thin.ttf" />
