--- a/Application/Application/LTBLApplication.csproj
+++ b/Application/Application/LTBLApplication.csproj
@@ -69,6 +69,9 @@
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\..\packages\Newtonsoft.Json.6.0.8\lib\portable-net45+wp80+win8+wpa81+aspnetcore50\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="Share.Forms.Plugin.Abstractions">
+      <HintPath>..\..\packages\Share.Plugin.Xamarin.Forms.1.0.0.0\lib\portable-net45+wp8+win8+MonoAndroid10+MonoTouch10\Share.Forms.Plugin.Abstractions.dll</HintPath>
+    </Reference>
     <Reference Include="Xamarin.Forms.Core">
       <HintPath>..\..\packages\Xamarin.Forms.1.3.1.6296\lib\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.Core.dll</HintPath>
     </Reference>
