--- a/Application/Application.Droid/LTBLApplication.Droid.csproj
+++ b/Application/Application.Droid/LTBLApplication.Droid.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SaveLoad.cs" />
     <Compile Include="Share.cs" />
+    <Compile Include="TcpMessage.cs" />
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Assets\Roboto-Thin.ttf" />
@@ -108,6 +109,10 @@
     <ProjectReference Include="..\..\..\..\..\Desktop\sockets-for-pcl-master\Sockets\Sockets.Plugin.Android\Sockets.Plugin.Android.csproj">
       <Project>{56a56f17-7de1-4ca1-9617-bf32e971ac84}</Project>
       <Name>Sockets.Plugin.Android</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Base\Base.csproj">
+      <Project>{0cd0cb9f-475c-4160-89a4-d9399006e3c4}</Project>
+      <Name>Base</Name>
     </ProjectReference>
     <ProjectReference Include="..\Application\LTBLApplication.csproj">
       <Name>LTBLApplication</Name>
