--- a/Base/Base.csproj
+++ b/Base/Base.csproj
@@ -34,14 +34,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="AbstractMessage.cs" />
     <Compile Include="Button.cs" />
     <Compile Include="DeviceManager.cs" />
     <Compile Include="IDevice.cs" />
     <Compile Include="IMessage.cs" />
     <Compile Include="NetworkType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TcpMessage.cs" />
-    <Compile Include="UdpMessage.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
